--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --config jest.config.js",
-    "test:watch": "jest --config jest.config.js --coverage --watchAll",
+    "test": "jest -i --config jest.config.js",
+    "test:watch": "jest -i --config jest.config.js --coverage --watchAll",
     "build": "tsc",
     "lint": "eslint \"src/**\""
   },
