--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "target": "es6"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/__tests__/*", "**/__tests_config__/*"]
 }
