testing env with docker containers

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "keywords": [
     "redis",
     "redistimeseries",
-    "redislab",
+    "redislabs",
     "timeseries",
     "javascript",
     "typescript"
