--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@averias/redis-time-series",
+  "name": "redis-time-series-ts",
   "version": "1.1.0",
   "description": "Javascript RedisTimeSeries client",
   "main": "lib/index.js",
