--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
     
     services:
-      redisgraph:
+      redistimeseries:
         image: redislabs/redistimeseries:latest
         ports:
           - 6379:6379
